<resources>
    <string name="app_name">Calculator</string>
    <string name="initial_display">0</string>
    <string name="btn_ac">AC</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>
    <string name="op_multiply">*</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="op_subtract">-</string>
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="op_add">+</string>
    <string name="digit_0">0</string>
    <string name="btn_dot">.</string>
    <string name="op_equal">=</string>
    <string name="op_divide">/</string>
    <string name="error">Error</string>
</resources>